# mlflow-poetry-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
app/: README.md
mlruns/0/: meta.yaml
model/: train.py
model/deprecate/: train.py
