[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Sandy <7pandeys@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
mlflow = "^2.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
